@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/download.php,v 1.38 2005/12/15 20:10:47 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/download.php,v 1.39 2008/02/10 20:52:23 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -17,6 +17,15 @@ if(!isset($HTTP_USER_AGENT))
 require_once './config/conf.php';
 require_once './common.php';
 require_once './classes/class_local.php';
+
+$ev = "";
+$pop = new nocc_imap($ev);
+if (NoccException::isException($ev)) {
+    require ('./html/header.php');
+    require ('./html/error.php');
+    require ('./html/footer.php');
+    return;
+}
 
 $mime = $_REQUEST['mime'];
 $filename = $_REQUEST['filename'];
@@ -57,15 +66,6 @@ if ($isIE && !$isIE6) {
     header ("Content-Type: application/download; name=\"$filename\"");
 } else {
     header ("Content-Type: application/octet-stream; name=\"$filename\"");
-}
-
-$ev = "";
-$pop = new nocc_imap($ev);
-if (NoccException::isException($ev)) {
-    require ('./html/header.php');
-    require ('./html/error.php');
-    require ('./html/footer.php');
-    return;
 }
 
 $file = $pop->fetchbody($mail, $part, $ev);
