@@ -1,6 +1,8 @@
 NOCC 1.7  ?? ??, ??
 
   Bugs
+    * Bug #2140106 : Calling download.php without prior login results in
+      download (Oliver Heil).
     * Bug #2013844 : Javascript warning validate(f) send.php (Arnaud Boudou).
     * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).
 
